Thu Jul 24 20:10:59 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix major GC flags.
	  * add GPR_FLAG_MAJOR_BY_FORCE, which indicates
	    major GC by METHOD, CAPI and so on (see GC_BY).
	  * remove GPR_FLAG_MAJOR_BY_RESCAN because not used.
	  * remove GPR_FLAG_MAJOR_BY_STRESS, use FORCE instead.

	* test/ruby/test_gc.rb: catch up.

Thu Jul 24 15:55:02 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/io.h (struct rb_io_buffer_t): PACKED_STRUCT should not
	  be used for platform-specific optimization. PACKED_STRUCT_UNALIGNED
	  should be used. [ruby-core:63988] [Bug #10088]

Thu Jul 24 04:42:13 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/benchmark.rb: split executable code into sample directory.
	* sample/benchmark.rb: ditto.

Thu Jul 24 04:36:49 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/tempfile.rb: split executable code into sample directory.
	* sample/tempfile.rb: ditto.

Thu Jul 24 04:29:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/pstore.rb: split executable code into sample directory.
	* sample/pstore.rb: ditto.

Wed Jul 23 23:50:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/defines.h, siphash.c, st.c (UNALIGNED_WORD_ACCESS):
	  add PowerPC64 too, which is capable to access unaligned words.
	  patched by Gustavo Frederico Temple Pedrosa in [ruby-core:63937].
	  [Feature #10081]

	* regint.h (PLATFORM_UNALIGNED_WORD_ACCESS): ditto.

Wed Jul 23 04:04:38 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/drb/extserv.rb: remove duplicate code with sample directory.
	  contributed from @vipulnsward. [fix GH-679]

Tue Jul 22 12:56:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_count): fix wrong single-byte optimization.
	  7bit ascii can be a trailing byte in Shift_JIS.
	  [ruby-dev:48442] [Bug #10078]

Tue Jul 22 01:48:38 2014  Eric Wong  <e@80x24.org>

	* include/ruby/io.h (rb_io_buffer_t): fix packing on gcc